<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_materie"
            android:icon="@drawable/book"
            android:title="@string/nav_materie" />
        <item
            android:id="@+id/nav_orario"
            android:icon="@drawable/calendario"
            android:title="@string/nav_orario" />

        <item
            android:id="@+id/nav_verifiche"
            android:icon="@drawable/exam"
            android:title="@string/nav_verifiche" />

        <item
            android:id="@+id/nav_registrazioni"
            android:icon="@drawable/microphone"
            android:title="@string/nav_registrazioni" />

        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/notepad"
            android:title="@string/nav_note" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_segnala_bug"
                android:icon="@drawable/warning"
                android:title="@string/nav_segnala_bug" />
        </menu>
    </item>

</menu>
